antsurance/force-app/main/default/objects/Antsurance_Agent_Eval__mdt/Antsurance_Agent_Eval__mdt.object-meta.xml
<CustomObject>
    <description>One test of one of the jobs Claude does here: what was measured, the result, when it ran and the caveat that goes with it. The Claude at Work page shows these. Add a record when an eval is run again; the page never invents a score.</description>
    <label>Antsurance Agent Eval</label>
    <pluralLabel>Antsurance Agent Evals</pluralLabel>
</CustomObject>