antsurance/force-app/main/default/objects/Antsurance_Agent_Eval__mdt/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <description>The key of the job this test is about, as the Claude at Work page names it: intake, coverage, photos, analysis, desk, underwriting, renewals, assistant or portal.</description>
    <inlineHelpText>The agent key, for example coverage.</inlineHelpText>
    <label>Agent</label>
    <length>40</length>
    <type>Text</type>
</CustomField>