antsurance/force-app/main/default/objects/Antsurance_Agent_Eval__mdt/fields/Caveat__c.field-meta.xml
<CustomField>
    <fullName>Caveat__c</fullName>
    <description>The limit of this test that a reader should know before trusting the result.</description>
    <inlineHelpText>What this result does not show.</inlineHelpText>
    <label>Caveat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>