antsurance/force-app/main/default/objects/Antsurance_Agent_Eval__mdt/fields/Measured__c.field-meta.xml
<CustomField>
    <fullName>Measured__c</fullName>
    <description>One line on what was measured and how.</description>
    <inlineHelpText>What was measured and how, in one line.</inlineHelpText>
    <label>Measured</label>
    <length>255</length>
    <type>Text</type>
</CustomField>