antsurance/force-app/main/default/objects/Antsurance_Agent_Eval__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order of this test among an agent's tests, lowest first.</description>
    <inlineHelpText>Lowest first.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>