antsurance/force-app/main/default/objects/Antsurance_Agent_Eval__mdt/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>The result in a few words, as it should be shown: a count such as 14 of 14, or a figure with its unit.</description>
    <inlineHelpText>For example 14 of 14.</inlineHelpText>
    <label>Result</label>
    <length>80</length>
    <type>Text</type>
</CustomField>