antsurance/force-app/main/default/objects/Antsurance_Agent_Eval__mdt/fields/Run_On__c.field-meta.xml
<CustomField>
    <fullName>Run_On__c</fullName>
    <description>The day the test last ran.</description>
    <inlineHelpText>The day the test last ran.</inlineHelpText>
    <label>Run On</label>
    <type>Date</type>
</CustomField>