antsurance/force-app/main/default/objects/Antsurance_Agent_Eval__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Where the test lives in the project, so it can be run again.</description>
    <inlineHelpText>The folder or file of the test.</inlineHelpText>
    <label>Source</label>
    <length>120</length>
    <type>Text</type>
</CustomField>